--- a/css/awesome.css
+++ b/css/awesome.css
@@ -1,17 +1,28 @@
 .awesome, .awesome:visited {
-	background: #222 url(/images/alert-overlay.png) repeat-x; 
+  background: #222 repeat-x; 
 	display: inline-block; 
 	padding: 5px 10px 6px; 
 	color: #fff; 
 	text-decoration: none;
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px;
+	-moz-border-radius: 20px; 
+	-webkit-border-radius: 20px;
+	border-radius: 20px;
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  /* This is the beest we can do for IE's drop shadow stuff*/
+	filter: progid:DXImageTransform.Microsoft.Shadow(color='#969696', Direction=145, Strength=2);
+  -webkit-text-stroke: 1px transparent;
 	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
 	border-bottom: 1px solid rgba(0,0,0,0.25);
 	position: relative;
 	cursor: pointer;
+}
+
+.square.awesome {
+  -moz-border-radius: 5px; 
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
 }
 
 .awesome:hover { 
@@ -38,6 +49,15 @@
 .large.awesome, .large.awesome:visited { 
   font-size: 14px; 
   padding: 8px 14px 9px; 
+}
+
+.black-gloss.awesome, .black-gloss.awesome:visited{
+  background: #aebcbf; /* old browsers */
+  background: -moz-linear-gradient(top, #aebcbf 0%, #6e7774 50%, #0a0e0a 51%, #0a0809 100%); /* firefox */
+
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#aebcbf), color-stop(50%,#6e7774), color-stop(51%,#0a0e0a), color-stop(100%,#0a0809)); /* webkit */
+
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aebcbf', endColorstr='#0a0809',GradientType=0 ); /* ie */
 }
 
 .green.awesome, .green.awesome:visited { 
