--- a/baseline.css
+++ b/baseline.css
@@ -1,9 +1,9 @@
 @import url("960-fixed.css");
 @import url("awesome.css");
+@import url("formalize.css");
 
 html{
   margin:0;
   padding:0;
   line-height:1.45em;
 }
-
