--- a/css/awesome.css
+++ b/css/awesome.css
@@ -10,7 +10,7 @@
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-  /* This is the beest we can do for IE's drop shadow stuff*/
+  /* This is the best we can do for IE's drop shadow stuff*/
 	filter: progid:DXImageTransform.Microsoft.Shadow(color='#969696', Direction=145, Strength=2);
   -webkit-text-stroke: 1px transparent;
 	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
